Driver library loading refactoring
Former-commit-id: 1ca242f1c66593a42291200e3cfa66860f4f59af